
	* src/api/na-data-def.h: Complete the description of the fields.

	* src/core/na-io-provider.c:
	* src/core/na-object-profile-factory.c:
	* src/nact/nact-assistant-export.ui:
	* src/nact/nautilus-actions-config-tool.ui:
	Fix various mistakes and mispellings reported by Fr translation team.

	* configure.ac: Post-release bump version number.

2011-01-07 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-core-utils.c (na_core_utils_print_version):
	Print the compilation version of GLib2 and Gtk+ when in debug mode.

	* src/utils/Makefile.am:
	nautilus-actions-schemas is renamed as na-print-schemas,
	and is installed in PKGLIBEXECDIR.

2011-01-06 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-window.c (iabout_get_toplevel):
	Let the About dialog get the toplevel window.

	* src/nact/nact-preferences.ui:
	* src/nact/nautilus-actions-config-tool.ui:
	Apply patch provided by Christian Kirbach. Fix #638548.

	Use the same script to migrate items and preferences.

	* README-GCONF: Document migrated and renamed preferences.

	* src/utils/nautilus-actions-gconf2desktop.sh.in:
	Rewrite migrated preferences as keyed files.
	At last, remove the whole Nautilus-Actions tree from GConf.

2011-01-05 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/console-utils.c (console_cmdline_get_description):
	Returns the full address of the page to enter a new bug in Bugzilla.

	* src/core/na-gconf-migration.c:
	* src/core/na-gconf-migration.h (na_gconf_migration_run): New function.

	* src/core/Makefile.am: Updated accordingly.

	* src/nact/nact-main.c (main):
	* src/plugin-menu/nautilus-module.c (nautilus_module_initialize):
	* src/utils/nautilus-actions-new.c (main):
	* src/utils/nautilus-actions-run.c (main):
	Automatically run the migration tool at startup.

	* src/utils/nautilus-actions-gconf2desktop.sh.in:
	* src/utils/nautilus-actions-delete.c:
	* src/utils/nautilus-actions-print.c:
	New items migration script and programs.